# lm-eval-server

./: Dockerfile  README.md  example.json  pyproject.toml
src/: api.py  lm_eval_harness_server.py  main.py
